[package]
name = "hs256-token"
version = "0.1.0"
authors = ["Jacobtread <jacobtread@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Minimal token implementation using HS256 similar to JWT"
homepage = "https://github.com/jacobtread/jsonwebtoken-hs256"
repository = "https://github.com/jacobtread/jsonwebtoken-hs256"
keywords = ["api", "token"]
edition = "2021"
include = ["src/**/*", "LICENSE.md", "README.md"]

[dependencies]
serde_json = "1.0"
serde = {version = "1", features = ["derive"] }
ring = { version = "0.16", features = ["std"] }
base64ct = { version = "1", features = ["alloc"] }
