[package]
name = "hs256-token"
version = "0.1.0"
authors = ["Jacobtread <jacobtread@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Minimal token implementation using HS256 similar to JWT"
homepage = "https://github.com/jacobtread/hs256-token"
repository = "https://github.com/jacobtread/hs256-token"
keywords = ["api", "token"]
edition = "2021"

[dependencies]
serde_json = "1"
serde = "1"
ring = "0.16"
base64ct = { version = "1", features = ["alloc"] }
